--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.1.2",
+        "autoprefixer": "^10.3.1",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
@@ -18,14 +19,19 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
+        "postcss-cli": "^8.3.1",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.2.4",
         "vue": "^3.1.2",
         "vue-loader": "^16.2.0",
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "@tailwindcss/forms": "^0.3.3",
+        "startbootstrap-sb-admin-2": "^4.1.4",
         "vue-axios": "^3.2.4",
         "vue-cookies": "^1.7.4",
         "vue-router": "^4.0.10",
